# coding_agents

./: .gitignore  README.md  print_ast.py  pyproject.toml  requirement.md  test_elixir.exs
cli/: __main__.py
cli/agents/: base.py  design.py  requirement.py  task.py
cli/core/: code_graph.py  config.py  context_bundle.py  embedding.py  llm.py
cli/retrievers/: document.py  rag.py  search.py  web.py
cli/templates/design/: prompt.md.j2
cli/templates/requirement/: clarification_prompt.md.j2  prompt.md.j2
cli/templates/task/: prompt.md.j2
output/tasks/: task1.md  task2.md  task3.md  task4.md  task5.md  task6.md  task7.md  task8.md
tests/: debug_path.py  test_base.py
tests/cli/agents/: test_base.py  test_design.py  test_requirement.py  test_task.py
tests/cli/core/: test_code_graph.py
