[project]
name = "coding-agents"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "langchain-community>=0.3.27",
    "langchain>=0.3.26",
    "langchain-core>=0.3.27",
    "langchain-google-genai>=2.1.8",
    "langchain-google-community",
    "langchain-ollama>=0.3.5",
    "faiss-cpu>=1.11.0.post1",
    "chromadb>=1.0.15",
    "sentence-transformers>=5.0.0",
    "typer>=0.16.0",
    "rich>=14.0.0",
    "prompt-toolkit>=3.0.41",
    "pytest>=8.3.2",
    "jinja2>=3.1.4",
    "networkx>=3.5",
    "sentence-transformers>=2.7.0",
    "tree-sitter>=0.21.0",
    "tree-sitter-language-pack>=0.9.0",
]

[project.scripts]
cli = "cli.__main__:app"

[tool.setuptools.packages.find]
include = ["cli*", "cli.*"]




